Toiminnalisuudet saatu toimimaan

--- a/src/main/resources/templates/paivakirja/lisaa.html
+++ b/src/main/resources/templates/paivakirja/lisaa.html
@@ -2,16 +2,20 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lisää Paivakirja merkintä</title>
+    <title>Lisää Päivakirja merkintä</title>
 </head>
 <body>
-    <h2>Lisää Paivakirja merkintä</h2>
-    <form th:object="${entry}" th:action="@{/paivakirja/add}" method="post">
+    <h2>Lisää Päivakirja merkintä</h2>
+    <form th:object="${entry}" th:action="@{/lisaa}" method="post">
         <label for="content">Sisältö:</label>
         <input type="text" id="content" name="content" th:field="*{content}" required>
         <br>
         <button type="submit">Lisää merkintä</button>
     </form>
-    <a href="/paivakirja/lista">Takaisin listaan</a>
+    <a th:href="@{/lista}">Takaisin listaan</a>
+    <ul>
+        <li><a th:href="@{/}" th:text="Etusivulle"></a></li>
+    </ul>
+
 </body>
 </html>
