--- a/src/main/resources/templates/paivakirja/index.html
+++ b/src/main/resources/templates/paivakirja/index.html
@@ -12,7 +12,7 @@
     <br>
     <a th:href="@{/lisaa}">Siirry lisaa-sivulle</a>
     <br>
-    <a th:href="@{/muokkaa/1}">Siirry muokkaa-sivulle (esimerkki)</a>
+    <a th:href="@{/muokkaa}">Siirry muokkaa-sivulle</a>
 
 </body>
 </html>
