Muokattu sivuja ja toiminnallisuutta

--- a/src/main/resources/templates/paivakirja/index.html
+++ b/src/main/resources/templates/paivakirja/index.html
@@ -5,14 +5,13 @@
     <title>Etusivu</title>
 </head>
 <body>
-    <h1>Tervetuloa!</h1>
+    <h1>Tervetuloa päiväkirja sovellukseen!</h1>
 
     <!-- Napit muihin sivuihin -->
-    <a th:href="@{/lista}">Siirry lista-sivulle</a>
+    <a th:href="@{/lista}">Siirry päiväkirjaan</a>
     <br>
-    <a th:href="@{/lisaa}">Siirry lisaa-sivulle</a>
+    <a th:href="@{/lisaa}">Lisää merkintä päiväkirjaan</a>
     <br>
-    <a th:href="@{/muokkaa}">Siirry muokkaa-sivulle</a>
 
 </body>
 </html>
