--- a/src/main/resources/templates/paivakirja/lisaa.html
+++ b/src/main/resources/templates/paivakirja/lisaa.html
@@ -12,7 +12,7 @@
         <br>
         <button type="submit">Lisää merkintä</button>
     </form>
-    <a th:href="@{/lista}">Takaisin listaan</a>
+    <a th:href="@{/lista}">Takaisin päiväkirjaan</a>
     <ul>
         <li><a th:href="@{/}" th:text="Etusivulle"></a></li>
     </ul>
