--- a/src/main/resources/templates/paivakirja/register.html
+++ b/src/main/resources/templates/paivakirja/register.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Rekisteröidy</title>
 </head>
 <body>
-    <h2>Register</h2>
+    <h2>Rekisteröidy</h2>
     
     <!-- Lisää virheviesti näkyville, jos rekisteröinti epäonnistui -->
-    <div th:if="${param.error}" style="color: red;">Username already exists</div>
+    <div th:if="${param.error}" style="color: red;">Käyttäjänimi on jo käytössä</div>
 
     <!-- Lisää viesti onnistuneesta rekisteröinnistä -->
-    <div th:if="${param.registerSuccess}" style="color: green;">Registration successful</div>
+    <div th:if="${param.registerSuccess}" style="color: green;">rekisteröinti onnistui</div>
 
     <form method="post" th:action="@{/register}">
-        <label for="username">Username:</label>
+        <label for="username">Käyttäjänimi:</label>
         <input type="text" id="username" name="username" required>
         
         <br>
         
-        <label for="password">Password:</label>
+        <label for="password">Salasana:</label>
         <input type="password" id="password" name="password" required>
         
         <br>
         
-        <button type="submit">Register</button>
+        <button type="submit">Rekisteröidy</button>
     </form>
 </body>
 </html>
