--- a/src/main/resources/templates/paivakirja/index.html
+++ b/src/main/resources/templates/paivakirja/index.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Etusivu</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+        }
+
+        .link-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        form {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Tervetuloa päiväkirja sovellukseen!</h1>
 
-    <a th:href="@{/lista}">Siirry päiväkirjaan</a>
-    <br>
-    <a th:href="@{/lisaa}">Lisää merkintä päiväkirjaan</a>
-    <br>
+    <div class="link-container">
+        <a th:href="@{/lista}">Siirry päiväkirjaan</a>
+        <a th:href="@{/lisaa}">Lisää merkintä päiväkirjaan</a>
+    </div>
 
+    <form th:action="@{/logout}" method="post">
+        <button type="submit">Kirjaudu ulos</button>
+    </form>
 </body>
 </html>
